Ajout du bouton Garry

--- a/Alpagua Manager/PrincipaleForm.resx
+++ b/Alpagua Manager/PrincipaleForm.resx
@@ -121,6 +121,70 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="garryButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJYAAAAyCAYAAAC+jCIaAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAA1oSURBVHhe7ZtrcxvVGcf3E5i69wsVNO+4lKa46rty
+        SQVopjMFDKYVM80FQ1yGBlIqjXESA6MiYjcg6jgRWbANIcI2LolsQy6OCCHYUKA29DLDO3+FfIXT/3+l
+        sz3n7CNbjlJ1ptkXv/Fz/vvczmWllWx7SqmYmMuOKMbEtIooxsS0iijGxLSKKMbEtIooxsS0iijGxLSK
+        KMbEtIooxsS0iihuhC+//DLmCkY6E0QUN4JULObKQToTRBQ3glTs/4Ae0G9QABeBaoAP6LcJSPka0a46
+        l4sOYPar6XDPhTXYKEiYBaugCno6bvO8/wbIvd6Ca9hHt5RjLRBTMnKoyeNlNTJWtLju7oSCr8jAUC7w
+        Wfp4cc0eoLelDsG1FOCmWzUFeFg3C/Himrv9Euj97tmwBs2CRMGBGnvTVz/7TVJtzWbU5IkyC7ARNtTR
+        sQUNXiaY97p7sOBbsMBrwD7gW4Ut5pGAf2r2VEXMdymwh7PnF9hHCeO21yG6Fje9MJoX4zUDwznm4OGy
+        9gzjptb87kfTjF92z4g1WA8k6AZVHqJbtiXVVSnP4vruhBoZD05wMGHQBd1rBeTYOTbpR2o1YvZ0hbW7
+        YYv5XDaav1mYk2sAu611CMadK5+viHskUd8zs9dss73y4MJ/yD0r1mAtEFxY+uui2vpURl2VRtJ1KBzO
+        6zsqeMmG5l0KjHdr3rIDC2aMTejLGNhiPhf49kxWylYO5h+ZwMs8qM9BhIeYPnfvSlvxmrGp+qa3sY4G
+        4yxzah+TgQO5yBrqHOAasLrWGpvwTMB/k3terEEjWHD2TEVd/+uE+sovPIuBF3Nq5YsV8RrZOpBRjEWO
+        FMbeRmAMY2FbUONCjLxWVJOzZfF6s/WkGuyZC2ZqEvRjD/RlH9Ia1Bd+c7vqwDbnVmKc9tH87o996uwH
+        C5E89XXzC6W8pdOPe8w+TJ17T3/pzEQEEwTxU0BpbNpXnb/0LG54MKHm0AgnStu9Tm7diTvy9WLQFPJ0
+        QvM2AmJmdhX6rJzb9tY2Q49ps47pM1CsTRi2mNcEfinOA3aIW6MZCi/jFRqb5eq6l3bVgW3Ojfvn85r2
+        03BfuHeu3shXOgP6MEtnJyKYIKg0crSoOruRyGDbYCY4LLv2Y9Oda+SeP6TV5FzwMM9PjPxk0gnd2whs
+        eOkTLLqTe26hogb+jMnXx7TH3sKkDR/CWOTYBFvMr4FPijlhh3B+bu1bH00yXwjXhZrpQ81drxu2JujP
+        DzVtqQPbnR9fLZe5J/Qz4R65eVzq/ay6PXDdoYuvVkQUCYJKYzO++mqPZ7FnJBcsxj25dOTajdsTijGc
+        COiF5l0qbJq1YIdse6a2EaZGqLG2qY28ETyQFmCL+TXwCTYcdgjrnL2wENHgW4XNmOD7HNa99bFk6MMe
+        eMPpsYa52linC7Y7x176mzk0jHn+lXxE10zN4/BhLV2dPSGv+GpFRJGNsODXHvQs9ozmgkZueyIZubbr
+        QJ9+yytg7LUCcnQy142PJKwac2crQQ+mRkaO4Q4GpsZY5LkIW6yhgU+KeWGHbMtnglquBt8qbDO2363b
+        qO921oEdxmqgZ7l3bgz3koeE+2fqhL1IddgL8pVgi+eHiCKClu/dm1Zf3+qF7HqxTy19uqhuezJp6WTk
+        zaDQDLgdSN/OdsHPaxb4F5gTdsj252qTNDXND39bu4Ndfezt4NVzJ2yxDsH11Fy1YsWxlqTBtwrbjI30
+        KfXBXO2sAzuMNWGe6ocLkTjuNfOxtqkz357DOUvTa41cnRiL54dEBARkx0746hu9Xsi9z6Dw31eCn6ZO
+        5t4LJsOPqcGDPlAHp4oW1cXwo3TwBSrivLWg3027ElYd9sRcpmbC63tezlna9v21TYIt1iG4nuIcYFtx
+        rsa5w3cZto4r8EYz+6QP56rHmvr821WnC7Y1RxNcL02dLEdi2Yu5x1xL1nX9uAfsCXaQzz0/moiAoNXb
+        B5Lqm31eCBt+/mje0og+VLA9AjviY3LT7oSaOhU81PdgHMS44Fp2vOJbceyHk2a81rrz6YgPF8LUiF5s
+        2I3qBRsOO2T7n2obbmqsDV/eGHwFXmaPZj+Etfb6OUtjn/RvVx3Y4jxN4Fdy15hwj7nOjx/EYw1+sj/z
+        OvugjvhOjINc7vnRWAMEpObOVdS3HvNC9r6aU65GqLFB2J4G44ify+OH+hg3AzuMM8G11S37klbM+Cxe
+        rd4qWlp1aSGisacdL2Qsjf0jpw+7Ub3InJlDmvP+N/JBze7n0pb+o2wi8Gefps55LH0WPOT2tqsOxuI8
+        XeBbctePUMO1manT5UbXCrDDPOb5MbEGCBraX86rb+/2QriBO17KWNr4fO1bWsZgHALN8iN7J3KRMfx8
+        2FYsgd49937F8t/ybO3jLn9qTecAVbM32m785qf+c5dhLNVMuTHMM3WmbGmNOPiXYLEj82S/9c3OYty2
+        Os0Cfz66LN83lLbycb2gXzTXW+vSOprnx8QaIKi6YzSjvpPzAjYPBkXCsab6Ue3thTEYh0i+c+cr1vjg
+        8WCB+mFbscStT+g//o5vaUt/q33UBT1TC+XItfteSFvaOjVTbo/sgXkY1wgusvYxYwnr1zchi3Fb6zQL
+        YrqZF7YF11qqRQ0xBdhWHvP8mFgDBM48Mdanvjvghcx9UFGuNnqitlGMwTgE2sUfP5uwfBlvjnUsbDe2
+        q/rxguXLXCv/WFH3FdOhxl7YJ2yx5r43cmr8XT8ck58P1V71YFs1CfSU2+NDhzOKvbDXRkjromORM/ge
+        D+O212kWxFWZA3YI15nr7e6hXj/QgbGVxzw/JtYAgf2js0X1vUEv5KEjeHu5ULG01AE8TKMBTgpjT8Pi
+        vKb9iBvL/KwDO4wj0Px95VzEt0G8xf0jacuHvUl9wDcF262bcmtwzuOnfEtzufm5RHAo3Dr1/gqw/yd1
+        mgFxWbcXQm1oJh/R2SNjYEdymefHxBogeNPS8qK6Ou9ZTJ8rq6G385Z2/+Ha6WZBjD0Ce/WOl5KW3/yH
+        FWs8Ol87WLCDGNKoLvPvPtoX0deDNYip7ZuqPZfBDusSaCm3x95XM2ritG9pElwDro2p3TycUJwL8nZj
+        3PY66wF/PltF9onrLO0B/egPW8xnnh+TiIAkpdF3iur7z3shdxzEAyKK9k5kIvr0+8HXB4RfkK5SM33m
+        FyvWmLnh1w/b02BccGvueysX1DS1Zul6ofYWyp+mXr8ROmGbtVNuj5znxIJvaT1Hgo/zkTUYOpEP5mRq
+        9IEv/1yoA+O21lkP+EbWmnCtdx/ri+jsDzFZ2GI+9/xoIgKbBKt3lHBADiB5HY6XVnC4jmLChq7ZPdkX
+        4OrzS1hMYzx6sn6wDqAxALtz5Z84BCM4BIZf9RM8e8D3UmHdodm8lZO6WZtgvHPiLDbX8OMcXY1zgy9v
+        nuWesbR1bfp8OTL3eq0S7LbWWQv43c49dNdar5epEe45YlZhi/mIe340oohk2eqnC+onowmVKHohPRN4
+        +8MhGD1dtPS1YMPmmLHI3w/bI7B3TlR9y6f3WGZDNSTYO+dganf6tYWCHdQmjeq72uDx8CuOXq4Bc+lr
+        upapEWrwz8JuW521gM/M7uk+K5a53Doa9rZeXun8EFEkSFiY/6iirjnoWTxwNK2oVz9bUA9PZiLXNbw2
+        eqYY+Jk6NeTuh+0R2MvM6fokX05Y2qUw/G5eDVZylsbeUTMFW9fvZz3Th71PnPMtjbngOwSbMVnOy+yR
+        c3C1O8dqmwZ//g61LXUYJ4FrhekL5TBGw/puD4Q5EbMKW8ynkc4OEUUNEpeGT+bVtYe9CHe9llSHForr
+        knwlYcVRQ95+2Myfmv+4Yl0ng3M5a/zAsXQkr4QZQ1jb7Z+5UdeH7RH24sZybr9/u8/S6KP7JrAL0x+W
+        LR/2OfG+b2nMA1++tbWlDuwgzgR679Lni5G9IKwn6ayJuCzsSD4T6dwQUdQgMf/+ufrwTEZdewQFLwOH
+        qvWFOxJM2B+cxyES/EwmzgcvyeZfS0g01WdyHA/2tbu7E2P2MDR8GodP8DUx+9ZgXGomtt5/u+pkYZux
+        3MPlBybTYowE1xExVdhhnkZI54aIogkKBP+Zc+i9ovrBmNcyzIN8/bCZ++JPX0+Ifhpe1wcBY68RuL5z
+        4gNfzOEyvVT7RThsxvlPn8yJfibMzRqwzZrBjffI8YwYo7mrXHtbaVcd2Gbs0PCZvOjfiPlPgseFbthh
+        nkZIZ4aIoguKBH8Ss/KvFXXoXFE9Od+nNk14EX41g7csXNe8txw8VLroP7Hp4nUpj8nwQu2ZA7a3HvBb
+        Zg+w14T9w3cGNmP8p0/lRD+T1y7UNhy2W7Ob65KeTIpxhPU++mJRtasOfDdhrOP69X40U/+RE7VXK9hW
+        /UZI54WIYiNQsJONAj4zsAEX/orBfHvqAoxrRPD3W+ug/yVJinfhXxGwBymPCfvnAzVj+DtHfgqT/EzY
+        h1tPo/8jXIojul676pgxvIn1fjRTP/h3PWDmaIh0TogobgSpWMyVg3QmiChuBKlYzJWDdCaIKMbEtIoo
+        xsS0iijGxLSKKMbEtIooxsS0iijGxLSKKMbEtIooxsS0iijGxLSG8v4NzrffDSVjTJgAAAAASUVORK5C
+        YII=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAQAEBAAAAEAIABoBAAARgAAACAgAAABACAAqBAAAK4EAAAwMAAAAQAgAKglAABWFQAAQEAAAAEA
