--- a/Alpagua Manager/Properties/Resources.resx
+++ b/Alpagua Manager/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="GarryLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GarryLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo_luria" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo-luria.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
