--- a/Alpagua Manager/Properties/Resources.resx
+++ b/Alpagua Manager/Properties/Resources.resx
@@ -118,10 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="AlpaguaLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AlpaguaLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="GarryLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GarryLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="logo_luria" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo-luria.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="LuriaLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LuriaLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
